# NexAU

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  README_CN.md  README_streamlit.md  RELEASING.md  codecov.yml  fake_claude_code.py  fix_sessions.py  package-lock.json  package.json  pyproject.toml  pytest.ini  quickstart.py  quickstart_yaml.py  run-agent  run-agent.cmd  streamlit_simple.py  test_yaml_loading.py  tracer.json
.github/: release-template.md
.github/workflows/: ai_code_review.yml  cd.yml  ci.yml  milestone-auto-manage.yml  project-auto-cancelled.yml  project-auto-status-on-close.yml  project-auto-status.yml  project-readme-sync.yml
.vibe_changes/: HOOK_HISTORY_MODIFICATION.md  agent_spec.md
agents/: deep_research_agent.yaml
agents/claude_code/: system-workflow.md
cli/: ARCHITECTURE.md  BUGFIX_HISTORY_PRESERVATION.md  CHANGELOG.md  EXAMPLES.md  FEATURE_PRETTIER_TOOLS.md  IMPROVEMENTS.md  QUICKSTART.md  agent_runner.py  cli_subagent_adapter.py  package-lock.json  package.json  readme.md  test-cli.sh  test.js
cli/source/: app.js  cli.js
docs/: MCP_INTEGRATION.md  cross-platform-guidelines.md  getting-started.md  index.md  windows-support-baseline.md  windows.md
docs/advanced-guides/: agent-team.md  async.md  context_compaction.md  custom-llm-generator.md  global-storage.md  hooks.md  image.md  llm-aggregators.md  mcp.md  sandbox.md  session-management.md  skills.md  streaming-events.md  templating.md  tool-formatters.md  tracer.md  tracing.md  transports.md  workflows.md
docs/core-concepts/: agents.md  llms.md  tools.md
docs/rfcs/: 0000-template.md  0001-state-persistence-on-stop.md  0002-agent-team.md  0004-context-overflow-emergency-compaction-and-error-events.md  0005-tool-search.md  0006-neutral-structured-tool-calling.md  0009-token-generate-provider-trace-memory.md  0013-runcode-repl-sessions.md  0014-team-stream-lock-conflict.md  0014-ump-provider-serializers.md  0015-merge-subagent-tool.md  0017-flatten-tool-output.md  0018-external-tool.md  0019-windows-support-powershell-default.md  0019-windows-support-with-git-bash.md  0020-windows-validation-ci-and-docs.md  0021-history-archive-on-compaction.md  0023-merge-runbook.md  0024-tool-result-raw-output-and-trace-id.md  0027-agent-workflow-orchestration.md  0028-workflow-subgraph-support.md  0029-workflow-parallel-map-execution.md  0030-workflow-agent-event-streaming.md  README.md
examples/: README_prompt_hacking.md  test_history_archive_e2e.py  test_interrupt.py
examples/code_agent/: README.md  code_agent.yaml  code_agent_codex.yaml  code_agent_sync.yaml  nexau.json  start.py  start_e2b.py  sub_agent.yaml  system-workflow.md  systemprompt.md  systemprompt_sync.md  test_context_value.py
examples/code_agent_external_tool/: code_agent.yaml  nexau.json  start.py  systemprompt.md
examples/deep_research/: deep_research_agent.yaml  deep_research_with_mcp.yaml  quickstart.py  quickstart_yaml.py  subagent.yaml  test_load_agent_config.py
examples/fake_claude_code/: cc_agent.yaml  fake_claude_code.py  start.py  system-workflow.md
examples/mcp/: allvoicelab.py  github_example.py  mcp_amap_example.py  minimax_voice_deep_research.py  multi_server_parallel_example.py
examples/nexau_building_team/: README.md  builder_agent.yaml  compact_prompt.md  event_store.py  leader_agent.yaml  rfc_writer_agent.yaml  snapshot_reducer.py  start.py  start_server.py  systemprompt_builder.md  systemprompt_leader.md  systemprompt_rfc_writer.md  test_run.py
examples/prompt_hacking/: prompt_hacking_simple.py  sample_dataset.jsonl
examples/prompt_hacking_expt_langfuse/: README_prompt_hacking.md  run_eval.py  sample_dataset.jsonl  upload_dataset.py
examples/simple_research/: README.md  main_agent.yaml  research_agent.yaml
examples/workflows/: README.md
nexau/: __init__.py  cli_wrapper.py
nexau/cli/: __init__.py  __main__.py  agent_runner.py  cli_subagent_adapter.py  entrypoint_checks.py  main.py  run_agent.py
nexau/core/: __init__.py  messages.py  usage.py  utils.py
northau/: __init__.py  cli_wrapper.py
northau/autotuning/: README.md  __init__.py  dataset.py
northau/cli/: __init__.py
northau/evaluator/: __init__.py  config.py  evaluator.py  experiment_manager.py  experiment_runner.py
rfcs/: 0002-agent-team.md  0003-llm-failover-middleware.md  0004-context-overflow-emergency-compaction-and-error-events.md  0005-tool-search.md  0006-framework-context.md  0006-rfc-catalog-completion-master-plan.md  0007-tool-system-architecture-and-binding.md  0008-session-persistence-and-history.md  0009-sandbox-isolation-and-lifecycle.md  0009-token-generate-provider-trace-memory.md  0010-llm-aggregator-event-stream.md  0011-middleware-hook-composition.md  0011-unified-token-usage-accounting.md  0012-global-storage-and-session-mutations.md  0012-runcode-repl-sessions.md  0013-subagent-delegation-and-context-propagation.md  0014-prompt-engineering-and-templating.md  0014-team-stream-lock-conflict.md  0015-transport-routing-and-dispatch.md  0016-mcp-resource-discovery-and-recovery.md  0016-micro-compact.md  0017-cli-and-yaml-config-loading.md  0018-skill-system-and-embeddings.md  0019-image-tokenization-and-caching.md  README.md  WRITING_GUIDE.md  mermaid-style-guide.md
rfcs/meta/: 0006-rfc-catalog-completion-master-plan.json  0007-tool-system-architecture-and-binding.json  0008-session-persistence-and-history.json  0009-sandbox-isolation-and-lifecycle.json  0010-llm-aggregator-event-stream.json  0011-middleware-hook-composition.json  0012-global-storage-and-session-mutations.json  0013-subagent-delegation-and-context-propagation.json  0014-prompt-engineering-and-templating.json  0015-transport-routing-and-dispatch.json  (+4 more)
scripts/: cross_val_agent.yaml  release.sh  sync_project_readme.py
tests/: __init__.py  conftest.py  test_agent_context.py  test_agent_global_storage.py  test_context_simple.py  test_context_with_tools.py  test_global_storage.py  test_hooks_global_storage.py  test_real_world_example.py
tools/: Edit.tool.yaml  WebSearch.yaml
(+723 files in other folders)
