[project]
name = "northau"
version = "0.1.0"
description = "A general-purpose agent framework inspired by Claude Code's architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "requests>=2.25.0",
    "jinja2>=3.0.0",
    "beautifulsoup4>=4.9.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "mcp>=1.12.3",
    "lark_oapi>=1.4.0",
    "sqlmodel>=0.0.18",
    "pytest>=7.0.0",
    "streamlit>=1.48.0",
    "plotly>=6.2.0",
    "pandas>=2.3.1",
    "langfuse>=3.2.3",
    "tiktoken>=0.5.0",
    "fastmcp",
    "diskcache>=5.6.3",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["northau*"]
